    for you and/or your users.
  * Merge style packaging for Windows avoids Win 10 packaging problems.
    requires Windows machine or VM to perform Windows packaging.
    Previously, https://github.com/Shoes3/exe-shoes
  * Merge style packaging for Linux - create deb
    Must be done on a like machine/os 
    Previously, https://github.com/Shoes3/linux-shoes
  
=== Fixed with 3.3.7
  * OSX: fullscreen incomplete
    https://github.com/shoes/shoes3/issues/408 
  * app.name = now works as documented. 
    May Break Existing Scripts
  * command line --ruby working again

=== Developer Issues with 3.3.7
  * make/**/env.rb - link against distributed libyaml
  * added lib/package/*  for mege packaging.
  
  
-------------- Shoes 3.3.6 -------------------------------

=== New with 3.3.6
  * Can set font and stroke color for Button, edit_line, edit_box,
    list_box and switch native widgets. 
    https://github.com/shoes/shoes3/issues/179

=== Fixed with 3.3.6
    Linux versions may not have workable symlinks to .so's
    https://github.com/shoes/shoes3/issues/392

=== Developer Issues with 3.3.6
  * remove undocumented game mode for shoes.terminal
  * fixed many gtk3 deprecations. 
  
  
-------------- Shoes 3.3.5 --------------------------------

=== New with 3.3.5
  * Add 'wheel' event 
    https://github.com/shoes/shoes3/issues/287
  * can preprocess events with new event {block}
    https://github.com/shoes/shoes3/issues/383
    https://github.com/shoes/shoes3/wiki/event-streams
    Experts Only 
    
=== Fixed with 3.3.5
  * Arch linux (probably others) are missing symlinks to libraries
    https://github.com/shoes/shoes3/issues/392
  * Windows cpu utilization
    https://github.com/shoes/shoes3/issues/387
  * OSX High Sierra (10.13) couldn't start Shoes
    https://github.com/shoes/shoes3/issues/398
  * Profiling has new output options for workaround
    https://github.com/shoes/shoes3/issues/390
    
=== Developer Issues with 3.3.5