@@ -29,18 +29,23 @@
   * Merge style packaging for Linux - create deb
     Must be done on a like machine/os 
     Previously, https://github.com/Shoes3/linux-shoes
+  * Merge style packaging for OSX - must be done on OSX. 
   
 === Fixed with 3.3.7
+  * Fewer complaints from Gkt 3.20+ systems
   * OSX: fullscreen incomplete
     https://github.com/shoes/shoes3/issues/408 
   * app.name = now works as documented. 
     May Break Existing Scripts
   * command line --ruby working again
+  * OSX: buttons can be created that use non default height.
 
 === Developer Issues with 3.3.7
   * make/**/env.rb - link against distributed libyaml
   * added lib/package/*  for mege packaging.
-  
+  * Using nsis 3.03 for Windows installer. Maintained and faster!
+    with unicdoe and large string enables. Potential to break
+    user written installers.
   
 -------------- Shoes 3.3.6 -------------------------------
 
